@@ -1,6 +1,9 @@
 package midas.util;
 
+import lombok.extern.slf4j.Slf4j;
+import midas.response.Status;
 import midas.model.MidasData;
+import midas.response.MidasResponse;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
@@ -10,10 +13,14 @@ import org.springframework.context.annotation.PropertySource;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.time.Duration;
+import java.util.Map;
+import java.util.Objects;
 
 @Component
+@Slf4j
 @PropertySource("classpath:midas.properties")
 public class CalcFarmUtil {
 
@@ -23,35 +30,88 @@ public class CalcFarmUtil {
     private int salePrice;
     @Value("${midas.given.money}")
     private int givenMoney;
-    @Value("${dota.api.uri}")
-    private String dotaApiUri;
+    @Value("${midas.dotabuff.url.first}")
+    private String firstHalfSecond;
+    @Value("${midas.dotabuff.url.second}")
+    private String secondHalfURL;
+    @Value("${midas.tag.team.table}")
+    private String teamTable;
+    @Value("${midas.icon.a}")
+    private String icon;
+    @Value("${midas.icon.class}")
+    private String iconClass;
+    @Value("${midas.duration.span}")
+    private String span;
+    @Value("${midas.dotabuff.timeout}")
+    private int timeout;
 
-    public int getFarmByMidasData(MidasData midasData) {
+    public Map<Status, MidasResponse> getFarmByMidasData(MidasData midasData) {
+
+        // Если не клиент не отправил время продажи мидаса, то будем считать что он был у него весь матч.
         if (midasData.getTimeOfSellMidas() == null)
             midasData.setTimeOfSellMidas(midasData.getTotalTimeOfMatch());
 
-        int result = (int) ((midasData.getTotalTimeOfMatch().minus(midasData.getMidasTime()).getSeconds() / cooldown) * givenMoney);
+        // ( ( Время длительности матча - время покупки мидаса - потерянное время ) / кулдаун мидаса ) * награда с использования мидаса
+        int result = (int) ((midasData.getTotalTimeOfMatch().minus(midasData.getMidasTime()).minus(midasData.getWastedTime()).getSeconds() / cooldown) * givenMoney);
+        int resultBufferBeforeSale = result;
 
-        if (midasData.getTotalTimeOfMatch().equals(midasData.getTimeOfSellMidas()))
+        // Если клиент отправил тайминг продажи, то к прибыли от мидаса прибавляем бабки от его продажи.
+        if (!midasData.getTotalTimeOfMatch().equals(midasData.getTimeOfSellMidas()))
             result += salePrice;
 
-        if (midasData.getFailMidasCast() > 0)
-            result -= givenMoney * midasData.getFailMidasCast();
-
-        return result;
+        return Map.of(Status.NO_ERRORS, new MidasResponse(resultBufferBeforeSale, result == resultBufferBeforeSale ? 0 : result));
 
     }
 
-    public int getFarmById() throws IOException {
-        Document dotabuffPage = Jsoup.parse(new URL("https://ru.dotabuff.com/matches/8113747033/builds"), 3000);
-        Elements elements = dotabuffPage.select("header[class=header no-padding]");
-        Element necessaryElement;
-        for (Element element : elements) {
-            System.out.println(element);
-            if (element.toString().contains("<a href=\"/items/power") && element.toString().contains("mode:sasal/bolt"))
-                necessaryElement = element;
+    public Map<Status, MidasResponse> getFarmById(String nick, long matchId) {
+
+        Document dotabuffPage;
+        try {
+            URI dotabuffURL = new URI(firstHalfSecond + matchId + secondHalfURL);
+            dotabuffPage = Jsoup.parse(dotabuffURL.toURL(), timeout);
+        } catch (IOException | URISyntaxException e) {
+            return Map.of(Status.DOTABUFF_URL_ERROR, MidasResponse.BAD_MIDAS_RESPONSE);
         }
-        return 1;
+
+        Elements elements = dotabuffPage.select(teamTable); // Ищем "div" с референсом team_table.png
+        Element necessaryMidasElement = null;
+
+        for (Element element : elements) {
+            // Если есть элемент c референсом icon_midas_a.png содержащий иконку мидаса и текст с именем игрока, то выкарчёвываем этот элемент.
+            if (element.toString().contains(icon) && element.toString().contains(nick))
+                necessaryMidasElement = element;
+        }
+
+
+        String[] midasTimeByRawData;
+        try {
+
+            midasTimeByRawData = ((Element) Objects.requireNonNull((Objects.requireNonNull(Objects.requireNonNull(necessaryMidasElement)
+                    .select(iconClass) // Тут просто выражение для поиска ССЫЛКИ(тег <a>) на иконку мидаса.
+                    .getFirst()
+                    .parent()))
+                    .nextSibling()))
+                    .text()
+                    .split(":");
+
+        } catch (NullPointerException n) {
+            return Map.of(Status.PARSE_ERROR, MidasResponse.BAD_MIDAS_RESPONSE);
+        }
+
+
+        String[] totalTimeByRawData = dotabuffPage
+                .select(span) // Тут просто выражение для поиска span-а, где записана длительность матча. Референс - duration.png
+                .getFirst()
+                .text()
+                .split(":");
+
+
+        // Парсим нашего "уродца" в Duration.
+        Duration midasTime = Duration.ofMinutes(Long.parseLong(midasTimeByRawData[0])).plusSeconds(Long.parseLong(midasTimeByRawData[1]));
+        Duration totalTime = Duration.ofMinutes(Long.parseLong(totalTimeByRawData[0])).plusSeconds(Long.parseLong(totalTimeByRawData[1]));
+
+        return getFarmByMidasData(new MidasData(totalTime, midasTime, Duration.ZERO, Duration.ZERO));
+
     }
 
 }
